Fix build failure
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>